--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -71,6 +71,7 @@ Brown skin: #a0616a
   max-width: fit-content;
 
 }
+
 .product-title {
   width: 303px;
   text-overflow: ellipsis;
@@ -78,7 +79,7 @@ Brown skin: #a0616a
   white-space: nowrap;
 }
 
-.cartcheckout img{
+.cartcheckout img {
   margin-bottom: 2em;
 }
 
@@ -728,6 +729,19 @@ dialog p {
   position: relative;
   top: -3em;
 
+}
+
+.title-style-span {
+  padding: 0.5em;
+  background-color: green;
+  color: white;
+  width: fit-content;
+
+
+}
+
+.grid-gap-1-em {
+  grid-gap: 1em;
 }
 
 #image-next-arrow:hover, #image-previous-arrow:hover {
@@ -1795,10 +1809,12 @@ dialog p {
   border: 1px solid gold;
 
 }
-.alert-info{
+
+.alert-info {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
 .alert {
   font-weight: bold;
   animation-name: alerts !important;
@@ -2304,6 +2320,26 @@ container when the user clicks on the dropdown button) */
   position: relative;
 }
 
+.p-relative img {
+  width: 100%;
+  max-width: 500px;
+  height: 100%;
+  max-height: 890px;
+}
+
+.p-relative a:hover {
+  text-decoration: none;
+}
+
+.p-relative img:hover {
+  opacity: 40%;
+}
+
+.p-title {
+  position: relative;
+  bottom: 4em;
+}
+
 /*.numbers {
   background-color: lightblue;
   border-radius: 50%;
@@ -2517,7 +2553,8 @@ a {
   background-color: #c40c0c !important;
 
 }
-.bold{
+
+.bold {
   font-weight: bold;
 }
 
@@ -2986,7 +3023,7 @@ header {
   align-items: center;
   grid-gap: 2%;
   display: grid;
-  grid-template-columns: auto auto auto 15% auto auto auto;
+  grid-template-columns: auto auto auto auto 15% auto auto auto;
 }
 
 #m-menu .button,
@@ -3364,7 +3401,9 @@ table {
   width: 100%;
 }
 
-
+.pacifico {
+  font-size: 3.25rem !important;
+}
 
 pre,
 textarea {
