--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -17,7 +17,7 @@ Brown skin: #a0616a
     border-radius: 25px;
     box-sizing: border-box;
     color: #ffffff;
-    font-weight: bold;
+    font-weight: bold !important;
     height: 52PX;
     letter-spacing: 1px;
     margin-bottom: 1em;
