--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -991,7 +991,7 @@ dialog p {
 
 .loader {
   border: 6px solid green;
-  border-top: 6px solid #fcec63;
+  border-top: 6px solid #B12704;
   border-radius: 50%;
   width: 35px;
   height: 35px;
