--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -2710,12 +2710,12 @@ a {
   color: #fff !important;
 }
 
-.section iframe, .creator-ego {
+/* .section iframe, .creator-ego {
   height: 100%;
   margin-bottom: 5em;
   margin-top: 5em;
   width: 100%;
-}
+} */
 
 #team-wrapper img {
   width: auto;
