--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -1181,8 +1181,8 @@ dialog p {
 }
 
 
-
-#panel h1 {
+main h2,
+main h1 {
   font-weight: normal !important;
 }
 
@@ -2714,8 +2714,9 @@ a {
   width: 100%;
 } */
 #blogs-stream {
-  grid-gap: 1em;
-  grid-template-columns: 70% 30%;
+  grid-gap: 2%;
+  grid-template-columns: 65% 33%;
+  width:100%;
 }
 
 #team-wrapper img {
