--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -1,12 +1,3 @@
-/*
-STYLE
-
-Fair skin: #ffd5d8
-Brown skin: #a0616a
-
-*/
-
-
 
 @tailwind base;
 @tailwind components;
@@ -137,41 +128,8 @@ Brown skin: #a0616a
   border: 2px solid #009688;
 }
 
-.slideshow-main-image * {
-  max-width: 600px;
-  margin-bottom: 0 !important;
-}
-
-.slideshow-navigation {
-  display: grid;
-  grid-template-columns: auto 70% auto;
-  align-items: center;
-  grid-column-start: 2;
-  grid-gap: .5em;
-
-}
-
 .ul-products-thumbs {
   width: 1600px;
-}
-
-.slideshow-navigation li {
-  display: inline;
-  float: left;
-}
-
-.slideshow-navigation li img {
-  width: 70px !important;
-  height: auto !important;
-  margin: 0 !important;
-}
-
-.slideshow-navigation img:hover {
-  cursor: pointer;
-}
-
-.filter-grayscale {
-  filter: grayscale(7);
 }
 
 .checkout main {
@@ -215,20 +173,6 @@ Brown skin: #a0616a
   line-height: 30px;
   text-align: center;
   width: 1%;
-}
-
-#beta {
-  color: #797979;
-  float: right;
-  font-size: .5em;
-  padding: .2em;
-  text-transform: lowercase;
-  position: relative;
-  top: -.5em;
-}
-
-#box .for-creators-only {
-  visibility: hidden;
 }
 
 .break {
@@ -299,20 +243,6 @@ Brown skin: #a0616a
   margin-bottom: 1em;
 }
 
-.material-symbols-outlined {
-  font-size: 40px !important;
-  fill: none;
-  color: #cccaca;
-  font-variation-settings:
-    'FILL'0,
-    'wght'400,
-    'GRAD'0,
-    'opsz'48
-}
-
-/* h1, h2, h3, h4 {
-  font-family: 'Open Sans';
-} */
 dialog {
   display: none;
   padding: 2em;
@@ -324,86 +254,22 @@ dialog p {
   margin: auto;
 }
 
-#text-step0-label {
-  grid-column-start: 1;
-  grid-row-start: 2;
-}
-
-#text-step1-label {
-  grid-column-start: 2;
-  grid-row-start: 2;
-}
-
-#text-step2-label {
-  grid-column-start: 3;
-  grid-row-start: 2;
-}
-
-#span-step0-circle {
-  grid-column-start: 1;
-  grid-row-start: 1;
-}
-
-#span-step1-circle {
-  grid-column-start: 2;
-  grid-row-start: 1;
-}
-
-#span-step2-circle {
-  grid-column-start: 3;
-  grid-row-start: 1;
-}
-
-#steps-left {
-  width: 100%;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto;
-  margin: auto;
-  padding-top: 1.5em;
-  padding-bottom: 3em;
-}
-
-#create-box h3 {
-  font-size: 2em !important;
-}
-
-.step-completed {
-  background-color: green;
-  -ms-transform: scaleX(-1) rotate(-35deg);
-  /* IE 9 */
-  -webkit-transform: scaleX(-1) rotate(-35deg);
-  /* Chrome, Safari, Opera */
-  transform: scaleX(-1) rotate(-35deg);
-  color: #fff !important;
-  padding: 0.2em;
-}
-
-.step-incomplete {
-  background-color: #fff;
-  border: 3px solid #0c8dc4;
-}
-
-.step-current {
-  background-color: #0c8dc4;
-  border: 3px solid #0c8dc4;
-  color: #fff !important;
-}
 
 .material-icons {
   width: 24px;
   height: 24px;
   vertical-align: middle;
+  float:left;
+  position:relative;
+  top:.2em;
+  left:1em;
+}
+.mobile-chat-icon{
+  position:relative;
+  top:.5em;
+  right:.5em;
 }
 
-#steps-line {
-  width: 69%;
-  height: 3px;
-  margin: auto;
-  position: relative;
-  top: 2.8em;
-  background-color: #0c8dc4;
-}
 
 #remove-black-bar {
   position: relative;
@@ -419,18 +285,6 @@ dialog p {
   width: 98%;
   height: 98%;
   background-color: #fff;
-}
-
-.step {
-  height: 30px;
-  width: 30px;
-  border-radius: 9999px;
-  text-align: center;
-  color: green;
-  font-size: 1.3em;
-  margin: auto;
-  position: relative;
-  z-index: 1;
 }
 
 #m-close {
@@ -458,20 +312,6 @@ dialog p {
 #container {
   background-color: #8bc34a0a;
 }
-
-/*
-#current-user {
-
-  grid-gap: 7em;
-  display: grid;
-  grid-template-columns: 3em;
-  line-height: inherit !important;
-  padding-left: 1.5em;
-  position: absolute;
-  right: 2em;
-  top: 1em;
-  color: #0c8dc4;
-}*/
 
 
 .message-preview {
@@ -525,18 +365,6 @@ dialog p {
 #footer-content-wrapper {
   margin: auto;
   text-align: center;
-}
-
-#grid-custom-url {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 1em;
-  float: left;
-}
-
-#grid-custom-url * {
-  margin: auto;
-  width: fit-content;
 }
 
 #footer-content-wrapper a {
@@ -834,15 +662,6 @@ dialog p {
   background-color: #ffffff;
 }
 
-/* #div-banner-blank {
-  max-width: 1036px;
-  height: 275px;
-  background-image: url("../images/banner.webp");
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-} */
-
 #banner {
 
   padding: 1.5em;
@@ -866,12 +685,6 @@ dialog p {
   color: green;
 }
 
-/* .image-youtube-thumb {
-  width: 100%;
-  border-radius: .5em;
-  background: #f5f7fa;
-  box-shadow: 2px 4px 12px #0c8dc41a;
-} */
 
 #index main {
   display: grid;
@@ -1116,6 +929,7 @@ dialog p {
   width: 100%;
   max-width: 482px;
   box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%);
+  border: 1px solid green;
 }
 
 #m {
@@ -1298,12 +1112,6 @@ main h1 {
 .maxw250px {
   max-width: 250px;
 }
-/* #signin {
-
-  padding-left: 2em;
-  width: 200px;
-  position: relative;
-} */
 
 #sentiment-survey h1 {
   text-align: center;
@@ -1360,9 +1168,6 @@ main h1 {
 
 }
 
-.color-orange {
-  color: orange;
-}
 
 #tabs-wrapper {
   display: grid;
@@ -1910,12 +1715,6 @@ input[type="checkbox"]{
   border-bottom: 1px solid #1d1d1d;
 }
 
-/*#exe-sub {
-  background-image: url(../images/lock.webp);
-  background-repeat: no-repeat;
-  background-position: left;
-}*/
-
 .no-float label {
   float: none !important;
 }
@@ -1972,13 +1771,6 @@ input[type="checkbox"]{
   background-color: #f1cc0f !important;
 }
 
-.creator-pic {
-  border: .2em solid #fff;
-  border-radius: 9999px;
-  margin-right: .2em;
-  position: relative;
-  top: .4em;
-}
 
 .float-right {
   float: right;
@@ -2001,11 +1793,6 @@ input[type="checkbox"]{
   height: 60px;
 }
 
-/* .extra-large-font, h2 {
-
-  font-family: 'Open Sans';
-
-} */
 
 h2{
   font-size: 2em;
@@ -2121,11 +1908,6 @@ h3{
   margin: auto;
 }
 
-/* .grid-two-cols,
-.three-col-grid * {
-  margin: auto;
-} */
-
 .ginormous {
   font-size: 5em !important;
 
@@ -2139,20 +1921,15 @@ h3{
   margin-top: 5px;
   margin-bottom: 20px;
   text-align: center;
-  /* background-color: #B12704; */
   padding: .2em;
   border-radius: .2em;
-  /* color: #fff;
-  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%); */
   font-weight: 700;
   color:#000;
 
 }
 
 .call-out p {
-  /*  border-radius: .2em;
-  box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%);
-  background-color: yellow; */
+
   padding: .3em;
 }
 
@@ -2269,7 +2046,6 @@ h3{
   //font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
   background-color: #2980B9;
 }
@@ -2417,19 +2193,6 @@ container when the user clicks on the dropdown button) */
   min-height:69px;
 }
 
-/*.numbers {
-  background-color: lightblue;
-  border-radius: 50%;
-  color: #fff;
-  float: left;
-  font-size: 2em;
-  height: 1.3em;
-  margin-bottom: 1em;
-  padding: 4px;
-  text-align: center;
-  vertical-align: middle;
-  width: 1.3em;
-}*/
 .one-em-font {
   font-size: 1em;
 }
@@ -2766,13 +2529,6 @@ a {
   color: #fff !important;
 }
 
-/* .section iframe, .creator-ego {
-  height: 100%;
-  margin-bottom: 5em;
-  margin-top: 5em;
-  width: 100%;
-} */
-
 #blogs-stream {
   grid-gap: 2%;
   grid-template-columns: 65% 33%;
@@ -2805,31 +2561,11 @@ a {
   grid-template-rows: auto auto;
 }
 
-/* .new-section-inner-grid {
-  display: grid;
-  grid-gap: 1em;
-  grid-template-columns: auto 25% auto;
-  align-items: center;
-  position: relative;
-
-} */
 
 #move-down {
 
   margin-top: 6em;
 }
-
-/* .wide img {
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 75px;
-  -ms-transform: scaleX(-1) rotate(-35deg);
-  IE 9
-  -webkit-transform: scaleX(-1) rotate(-35deg);
-  Chrome, Safari, Opera
-  transform: scaleX(-1) rotate(-35deg);
-
-} */
 
 .showAddress:hover .address {
   display: block;
@@ -2870,31 +2606,6 @@ a {
   width: 13px;
 }
 
-/*.switch
-{
-	display: inline-block;
-	height: 21px;
-	position: absolute;
-	right: 0;
-	width: 30px;
-}
-.switch input
-{
-	height: 0;
-	opacity: 0;
-	width: 0;
-}
-.switches
-{
-	padding: 1em;
-}
-.switches li
-{
-	display: grid;
-	grid-template-columns: 50% 50%;
-	padding-bottom: 4em;
-	position: relative;
-}*/
 .text-heading-label {
   color: #0c8dc4 !important;
   position: relative;
@@ -2948,12 +2659,12 @@ a {
 }
 
 a {
-  color: #0c8dc4;
+  color: green;
   text-decoration: none;
 }
 
 a:active {
-  color: blue;
+  color: red;
 }
 
 a:hover {
@@ -3232,6 +2943,10 @@ header {
   width: 30px;
 }
 
+.w24px {
+  width: 24px;
+}
+
 .card {
   background-color: white;
   padding: 2%;
@@ -3258,10 +2973,6 @@ header {
   margin: 0;
 }
 
-.creator-ego {
-  margin: 0 !important;
-  max-width: 200px;
-}
 
 .text-red {
   color: #B12704 !important;
@@ -3273,10 +2984,6 @@ header {
   line-height: 16px;
 }
 
-.creator-ego:hover {
-  box-shadow: 20px 20px 60px #0c8dc41a, -20px -20px 60px #ffffff;
-  opacity: .5;
-}
 
 #product-stream {
   grid-gap: 20px;
@@ -3381,16 +3088,6 @@ header #grid-2 {
 .m-hide {
   display: none;
 }
-
-/* #m-menu>*,
-header>* {
-  margin: auto;
-  margin-left: 0;
-}
-
-#header-user-icon {
-  border: 3px solid yellow;
-} */
 
 header #user-icon,
 header,
@@ -3540,10 +3237,6 @@ label {
   padding: .6em;
 }
 
-/*label, input[type="submit"] {
-  clear: both;
-  float: left;
-}*/
 .blog-masthead-images {
   width: 100%;
   height: auto;
@@ -3591,6 +3284,9 @@ table {
   width: 100%;
 }
 
+.white{
+  color:#fff;
+}
 .pacifico {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   margin-right:.2em;
@@ -3633,16 +3329,6 @@ td ul li {
 
 #home main p {
   max-width: 600px;
-}
-
-/* label {
-  float: left;
-  clear: both;
-} */
-
-#create-box fieldset {
-
-  box-shadow: 2px 4px 12px #0c8dc41a;
 }
 
 
