--- a/public_html/assets/css/forms.css
+++ b/public_html/assets/css/forms.css
@@ -67,11 +67,14 @@ form {
   margin-right: 4%;
 } */
 
-input:checked+.slider {
+input:checked.slider {
+  background-color: green;
+}
+input[type="checkbox"]:checked {
   background-color: green;
 }
 
-input:focus+.slider {
+input:focus.slider {
   box-shadow: 20px 20px 60px #0c8dc41a;
 }
 input[type="text"]:focus{
@@ -205,7 +208,7 @@ button:hover,
 input[type="submit"]:hover, .button:hover, button:active:hover {
   box-shadow: 0 10px 18px 0 rgb(0 0 0 / 30%);
   background: #B12704;
-  color: yellow;
+  color: rgb(255, 230, 109);
 }
 
 #embed-form {
