--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -93,11 +93,6 @@
   height: auto;
 }
 
-#logo-text {
-  font-family: Anton;
-  font-size: 3em;
-}
-
 .text-yellow {
   color: yellow;
 }
@@ -452,7 +447,10 @@ dialog p {
 .w100per {
   width: 100%;
 }
-
+.w320px{
+  width:320px !important;
+  height: 466px;
+}
 .maxw150px {
   max-width: 150px;
 }
@@ -1661,7 +1659,7 @@ input[type="checkbox"]{
   padding-left: 2.5em;
   padding-right: 2.5em;
   display: block;
-  background: #f8f8c1;
+  background: rgb(255, 230, 109);
   border: 1px solid gold;
 
 }
@@ -1687,12 +1685,6 @@ input[type="checkbox"]{
 
 #image-error-page {
   width: 50%;
-}
-
-.alert .material-icons {
-  color: #009688;
-  position: relative;
-  bottom: .2em;
 }
 
 .alt-section-inner-grid {
@@ -1956,12 +1948,6 @@ h3{
   width: 640px;
 }
 
-.highlighted {
-  font-size: 2.5em;
-  color: #0c8dc4;
-  font-family: "Concert One";
-}
-
 .lift {
   position: relative;
   top: -2em;
@@ -2047,7 +2033,6 @@ h3{
 #myDropdown {
   right: 0;
   top: 1.5em;
-  //font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .dropbtn:hover, .dropbtn:focus {
@@ -2082,7 +2067,7 @@ h3{
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
   background-color: #B12704;
-  color: #fcec63;
+  color: rgb(255, 230, 109);
   cursor: pointer;
 }
 
@@ -2176,6 +2161,7 @@ container when the user clicks on the dropdown button) */
 
 .p-relative img {
   width: 100%;
+  height:auto;
 
 }
 
@@ -2408,7 +2394,7 @@ a {
 }
 
 .yellow {
-  background-color: #ebb608;
+  background-color: rgb(255, 230, 109);
 
 }
 
@@ -2610,10 +2596,8 @@ a {
   width: 13px;
 }
 
-.text-heading-label {
-  color: #0c8dc4 !important;
-  position: relative;
-  top: 2em;
+label {
+font-size: 1em !important;
 }
 
 .price-options-grid {
@@ -2904,7 +2888,7 @@ header {
   grid-row-end: 2;
   grid-row-start: 2;
   background-color: green;
-  height: 78px;
+  height: 68px;
   position: fixed;
   top: 0;
   width: 100%;
@@ -2936,7 +2920,7 @@ header {
 }
 
 .h50px {
-  height: 50px;
+  height: 70px;
 }
 
 .w40px {
