--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -124,9 +124,9 @@ select {
 }
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+input[type='button'],
+input[type='reset'],
+input[type='submit'] {
 	-webkit-appearance: button;
 }
 
@@ -163,7 +163,7 @@ progress {
 }
 
 
-[type='search'] {
+input[type='search'] {
 	-webkit-appearance: textfield;
 
 	outline-offset: -2px;
@@ -242,7 +242,7 @@ textarea::placeholder {
 	color: #9ca3af;
 }
 
-input[type=text]:focus {
+inputinput[type=text]:focus {
 	border: 1px solid green;
 }
 
@@ -347,7 +347,7 @@ samp {
 	--tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-[type='text'], [type='email'], [type='url'], [type='password'], [type='number'], [type='date'], [type='datetime-local'], [type='month'], [type='search'], [type='tel'], [type='time'], [type='week'], [multiple], textarea, select {
+input[type='text'], input[type='email'], input[type='url'], input[type='password'], input[type='number'], input[type='date'], input[type='datetime-local'], input[type='month'], input[type='search'], input[type='tel'], input[type='time'], input[type='week'], [multiple], textarea, select {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
@@ -357,7 +357,7 @@ samp {
 	--tw-shadow: 0 0 #0000;
 }
 
-[type='text']:focus, [type='email']:focus, [type='url']:focus, [type='password']:focus, [type='number']:focus, [type='date']:focus, [type='datetime-local']:focus, [type='month']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='week']:focus, [multiple]:focus, textarea:focus, select:focus {
+input[type='text']:focus, input[type='email']:focus, input[type='url']:focus, input[type='password']:focus, input[type='number']:focus, input[type='date']:focus, input[type='datetime-local']:focus, input[type='month']:focus, input[type='search']:focus, input[type='tel']:focus, input[type='time']:focus, input[type='week']:focus, [multiple]:focus, textarea:focus, select:focus {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
 	--tw-ring-inset: var(--tw-empty,
@@ -420,7 +420,7 @@ select {
 	color-adjust: unset;
 }
 
-[type='checkbox'], [type='radio'] {
+input[type='checkbox'], input[type='radio'] {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
@@ -444,15 +444,15 @@ select {
 	--tw-shadow: 0 0 #0000;
 }
 
-[type='checkbox'] {
+input[type='checkbox'] {
 	border-radius: 0px;
 }
 
-[type='radio'] {
+input[type='radio'] {
 	border-radius: 100%;
 }
 
-[type='checkbox']:focus, [type='radio']:focus {
+input[type='checkbox']:focus, input[type='radio']:focus {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
 	--tw-ring-inset: var(--tw-empty,
@@ -467,7 +467,7 @@ select {
 	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
 
-[type='checkbox']:checked, [type='radio']:checked {
+input[type='checkbox']:checked, input[type='radio']:checked {
 	border-color: green;
 	background-color: green;
 	background-size: 100% 100%;
@@ -475,20 +475,20 @@ select {
 	background-repeat: no-repeat;
 }
 
-[type='checkbox']:checked {
+input[type='checkbox']:checked {
 	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
 }
 
-[type='radio']:checked {
+input[type='radio']:checked {
 	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
 }
 
-[type='checkbox']:checked:hover, [type='checkbox']:checked:focus, [type='radio']:checked:hover, [type='radio']:checked:focus {
+input[type='checkbox']:checked:hover, input[type='checkbox']:checked:focus, input[type='radio']:checked:hover, input[type='radio']:checked:focus {
 	border-color: transparent;
 	background-color: currentColor;
 }
 
-[type='checkbox']:indeterminate {
+input[type='checkbox']:indeterminate {
 	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 16 16'%3e%3cpath stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M4 8h8'/%3e%3c/svg%3e");
 	border-color: transparent;
 	background-color: currentColor;
@@ -497,12 +497,12 @@ select {
 	background-repeat: no-repeat;
 }
 
-[type='checkbox']:indeterminate:hover, [type='checkbox']:indeterminate:focus {
+input[type='checkbox']:indeterminate:hover, input[type='checkbox']:indeterminate:focus {
 	border-color: transparent;
 	background-color: currentColor;
 }
 
-[type='file'] {
+input[type='file'] {
 	background: unset;
 	border-color: inherit;
 	border-width: 0;
@@ -512,7 +512,7 @@ select {
 	line-height: inherit;
 }
 
-[type='file']:focus {
+input[type='file']:focus {
 	outline: 1px auto -webkit-focus-ring-color;
 }
 
@@ -540,39 +540,39 @@ select {
 	font-weight: 600;
 }
 
-.prose ol[type="A"] {
+.prose olinput[type="A"] {
 	--list-counter-style: upper-alpha;
 }
 
-.prose ol[type="a"] {
+.prose olinput[type="a"] {
 	--list-counter-style: lower-alpha;
 }
 
-.prose ol[type="A"s] {
+.prose olinput[type="A"s] {
 	--list-counter-style: upper-alpha;
 }
 
-.prose ol[type="a"s] {
+.prose olinput[type="a"s] {
 	--list-counter-style: lower-alpha;
 }
 
-.prose ol[type="I"] {
+.prose olinput[type="I"] {
 	--list-counter-style: upper-roman;
 }
 
-.prose ol[type="i"] {
+.prose olinput[type="i"] {
 	--list-counter-style: lower-roman;
 }
 
-.prose ol[type="I"s] {
+.prose olinput[type="I"s] {
 	--list-counter-style: upper-roman;
 }
 
-.prose ol[type="i"s] {
+.prose olinput[type="i"s] {
 	--list-counter-style: lower-roman;
 }
 
-.prose ol[type="1"] {
+.prose olinput[type="1"] {
 	--list-counter-style: decimal;
 }
 
