--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -72,12 +71,14 @@
   overflow: hidden;
   white-space: nowrap;
 }
+
 .alt-product-title {
- 
+
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
+
 .cartcheckout img {
   margin-bottom: 2em;
 }
@@ -241,7 +242,7 @@
 dialog {
   display: none;
   padding: 2em;
-  border:1px solid green;
+  border: 1px solid green;
 }
 
 dialog p {
@@ -254,16 +255,17 @@ dialog p {
   width: 24px;
   height: 24px;
   vertical-align: middle;
-  float:left;
-  position:relative;
-  top:.2em;
-  left:1em;
-  color:#fff;
+  float: left;
+  position: relative;
+  top: .2em;
+  left: 1em;
+  color: #fff;
 }
-.mobile-chat-icon{
-  position:relative;
-  top:.5em;
-  right:.5em;
+
+.mobile-chat-icon {
+  position: relative;
+  top: .5em;
+  right: .5em;
 }
 
 
@@ -447,10 +449,12 @@ dialog p {
 .w100per {
   width: 100%;
 }
-.w320px{
-  width:320px !important;
+
+.w320px {
+  width: 320px !important;
   height: 466px;
 }
+
 .maxw150px {
   max-width: 150px;
 }
@@ -577,7 +581,8 @@ dialog p {
   border-radius: 0.2em;
   font-weight: 700;
   color: green;
- 
+  padding-left: 0;
+
 }
 
 .title-style-span {
@@ -585,7 +590,7 @@ dialog p {
   background-color: green;
   color: white;
   width: fit-content;
-  font-size: .8em;
+  font-size: .58em;
   line-height: 1.3em;
   text-align: left;
   display: block;
@@ -705,12 +710,14 @@ dialog p {
 
 }
 
-.r-float{
-  float:right;
+.r-float {
+  float: right;
 }
-.l-float{
-  float:left;
+
+.l-float {
+  float: left;
 }
+
 .w300 {
   width: 90%;
   max-width: 300px;
@@ -1022,13 +1029,63 @@ dialog p {
   margin-top: 0;
 }
 
-
+#faqs h2,
 main h2,
 main h1 {
   font-weight: normal !important;
 }
 
+#faqs {
 
+  padding: 2em;
+  width: 100%;
+  max-width: 900px;
+  border: 1px solid #cccccc4a;
+  margin-bottom: 4em;
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  margin: 0;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #eee;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+
+}
+
+.accordion:after {
+  content: url(../images/expand_circle_down.svg);
+  font-size: 13px;
+  color: #777;
+  float: left;
+  margin-right: 5px;
+}
+
+.active:after {
+
+//  transform: rotate(180deg);
+ 
+}
 
 #pitch {
   bottom: 1em;
@@ -1110,6 +1167,7 @@ main h1 {
 .maxw200px {
   max-width: 200px;
 }
+
 .maxw250px {
   max-width: 250px;
 }
@@ -1231,10 +1289,12 @@ main h1 {
 #video-place-holder {
   width: 100%;
 }
-input[type="checkbox"]{
-  border:1px solid green;
+
+input[type="checkbox"] {
+  border: 1px solid green;
   //padding:1em;
 }
+
 #video {
   position: relative;
   padding-bottom: 56.25%;
@@ -1790,22 +1850,24 @@ input[type="checkbox"]{
 }
 
 
-h2{
+h2 {
   font-size: 2em;
-  color:green;
+  color: green;
   text-transform: capitalize;
 }
-h3{
+
+h3 {
   font-size: 1.6em;
-  color:green;
+  color: green;
   font-weight: normal;
   text-transform: capitalize;
 }
-.learn-more h2{
-  font-size:1.6em;
-  color:white;
-  position:relative;
-  top:.1em;
+
+.learn-more h2 {
+  font-size: 1.6em;
+  color: white;
+  position: relative;
+  top: .1em;
 }
 
 .extra-large-font {
@@ -1920,7 +1982,7 @@ h3{
   padding: .2em;
   border-radius: .2em;
   font-weight: 700;
-  color:#000;
+  color: #000;
 
 }
 
@@ -2161,7 +2223,7 @@ container when the user clicks on the dropdown button) */
 
 .p-relative img {
   width: 100%;
-  height:auto;
+  height: auto;
 
 }
 
@@ -2169,8 +2231,11 @@ container when the user clicks on the dropdown button) */
   text-decoration: none;
 }
 
-.p-relative img:hover {
-  opacity: 40%;
+#author{
+  border-radius: 999px;
+  position: relative;
+  top: 0.5em;
+
 }
 
 .p-title {
@@ -2522,7 +2587,7 @@ a {
 #blogs-stream {
   grid-gap: 2%;
   grid-template-columns: 65% 33%;
-  width:100%;
+  width: 100%;
 }
 
 #team-wrapper img {
@@ -2597,7 +2662,7 @@ a {
 }
 
 label {
-font-size: 1em !important;
+  font-size: 1em !important;
 }
 
 .price-options-grid {
@@ -2665,20 +2730,23 @@ a:hover {
   text-decoration: none;
 
 }
-.table-of-contents{
+
+.table-of-contents {
   background-color: #8bc34a0a;
-  padding:1em;
-  padding-bottom:2em;
+  padding: 1em;
+  padding-bottom: 2em;
 }
-.table-of-contents ul li{
 
-  border-bottom:1px solid #ccc;
-  padding:.5em;
+.table-of-contents ul li {
+
+  border-bottom: 1px solid #ccc;
+  padding: .5em;
 
 }
-.table-of-contents ul{
 
-  padding-left:.0;
+.table-of-contents ul {
+
+  padding-left: .0;
 
 }
 
@@ -2693,15 +2761,17 @@ a:hover {
   flex-direction: column;
   float: right;
   margin: 0 0 4.375rem 3.125rem;
-  margin-top:1em;
-  width:250px;
- 
+  margin-top: 1em;
+  width: 250px;
+
 }
+
 .nutrition-col .macro-facts {
   font-size: 1.0625rem;
   font-weight: 500;
   line-height: 2;
 }
+
 .nutrition-col .macro-facts__main-thead {
   border-bottom: 0.1875rem solid #ccc;
   display: -webkit-box;
@@ -2714,6 +2784,7 @@ a:hover {
   font-size: .9375rem;
   padding-bottom: 0.5rem;
 }
+
 .nutrition-col .macro-table__thead:first-child {
   margin-top: 0.5rem;
 }
@@ -2731,13 +2802,14 @@ a:hover {
   -ms-flex: 1;
   flex: 1;
 }
+
 .nutrition-col .macro-table__values {
   margin-left: 1rem;
 }
 
 .nutrition-col .daily-values {
-    margin-bottom: 1rem;
-    margin-top: 0.5625rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5625rem;
 }
 
 .nutrition-col .daily-values p, .nutrition-col .micro-facts-vitamins {
@@ -2754,6 +2826,7 @@ a:hover {
 
   width: 414px;
 }
+
 .nutrition-col .micro-facts-vitamins>ul {
   -moz-columns: 2;
   -webkit-columns: 2;
@@ -2814,7 +2887,7 @@ footer {
   display: grid;
   margin: 0 auto;
   padding-bottom: 5em;
-  padding-top: 10em;
+  padding-top: 2em;
   width: 100%;
   margin-bottom: 4em;
   background-color: #8bc34a0a;
@@ -2927,7 +3000,7 @@ header {
 }
 
 .w30px {
-  width: 30px;
+  width: 30px !important;
 }
 
 .w24px {
@@ -2984,14 +3057,17 @@ header {
   max-width: 1035px;
   width: 100%;
 }
-li form input{
-  margin-right:.6em;
- 
+
+li form input {
+  margin-right: .6em;
+
 }
-li form{
+
+li form {
   display: grid;
   grid-template-columns: 5% 95%;
 }
+
 #feedback-thanks {
   display: none;
   padding: 2em;
@@ -2999,8 +3075,16 @@ li form{
   text-align: center;
 }
 
+.h100per{
+  height: 100%;
+}
+.fix-comment-thumb{
+  position: relative;
+  top: 0.35em;
+
+}
 .review {
-  border-top: 1px solid #8bc34a;
+  border-bottom: 1px solid #8bc34a;
   padding-top: 2em;
   padding-bottom: 2em;
 }
@@ -3264,12 +3348,13 @@ table {
   width: 100%;
 }
 
-.white{
-  color:#fff;
+.white {
+  color: #fff;
 }
+
 .pacifico {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  margin-right:.2em;
+  margin-right: .2em;
 }
 
 pre,
