--- a/public_html/assets/css/mobile.css
+++ b/public_html/assets/css/mobile.css
@@ -2,9 +2,6 @@
 Extra small devices (phones, 476px and down) 
 */
 
-.maxw250px *{
- // max-width: 250px;
- }
 
 @media only screen and (max-width: 476px) {
 
@@ -13,7 +10,16 @@ Extra small devices (phones, 476px and down)
   #checkout-content .two-col-grid {
     display: block;
   }
-.phone-hide,
+
+  #checkout-header {
+    display: grid;
+  }
+
+  #card-button {
+    background-position: 10% !important;
+  }
+
+  .phone-hide,
   .hide {
     display: none !important;
   }
@@ -76,50 +82,67 @@ Extra small devices (phones, 600px and down)
 */
 @media only screen and (max-width: 600px) {
 
+  .alert-info {
+
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .p-relative img {
     width: 100%;
-    max-width: 300px;
+    //max-width: 300px;
     height: auto;
-    
-}
+
+  }
 
   .charitable-grid {
-  
+
     width: auto;
   }
+
   #blogs-stream,
-  .reviewer-grid  {
+  .reviewer-grid {
 
- display: block;
- 
-}
-.review{
-  display: block;
-  width: 80%;
-    margin: auto;
-}
-  .maxw250px *{
-   // max-width: 250px;
-   }
-
-   .stars-grid {
     display: block;
-    width:auto;
+
+  }
+
+  .review {
+    display: block;
+    width: 80%;
+    margin: auto;
+  }
+
+  .maxw250px * {
+    max-width: 345px !important;
+  }
+
+  .w250px {
+
+    width: 100%;
+
+  }
+
+  .stars-grid {
+    display: block;
+    width: auto;
     //padding:1em;
- 
-}
- 
-#item #banner-footer{
-display: none;
-}
-.recipes-stream,
+
+  }
+
+  #item #banner-footer {
+    display: none;
+  }
+
+  .recipes-stream,
   #product-stream,
   #checkout-content .two-col-grid {
     display: block;
   }
 
 
- 
+
   .m-hide {
     display: block;
   }
@@ -127,6 +150,7 @@ display: none;
   .margin-top-6-em {
     margin-top: 0 !important;
   }
+
   .recipes-stream,
   #product-stream {
     grid-template-columns: 0 !important;
@@ -211,7 +235,7 @@ display: none;
   }
 
   #product-stream img {
- 
+
     margin: auto;
   }
 
@@ -485,7 +509,8 @@ display: none;
   #home main {
     display: block;
   }
-  .order-summary{
+
+  .order-summary {
     display: none
   }
 
@@ -496,22 +521,30 @@ Small devices (portrait tablets and large phones, 600px and up)
 */
 @media only screen and (min-width: 600px) {
 
- 
+  .products-stream {
+    width: 100%;
+    display: grid;
+    /* grid-gap: 2%;  BAD for 1049px screens */
+    grid-template-columns: 50% 50%;
 
-  .order-summary{
+  }
+
+
+  .order-summary {
     display: block;
   }
+
   #checkout-main {
     width: 100%;
 
-}
+  }
 
   #banner-slogan {
     height: auto;
     margin: revert;
-}
+  }
 
- /*  #banner-slogan {
+  /*  #banner-slogan {
 
     height: auto; 
 
@@ -524,13 +557,13 @@ Small devices (portrait tablets and large phones, 600px and up)
   #about .hide {
     display: none;
   } */
-  
-  
+
+
   .recipes-stream,
   .products-stream {
-    
+
     grid-template-columns: 50% 50%;
-}
+  }
 
   /* General */
   #sub-nav {
@@ -661,9 +694,11 @@ Small devices (portrait tablets and large phones, 600px and up)
 Medium devices (landscape tablets, 768px and up) 
 */
 @media only screen and (min-width: 768px) {
+#user-icon{
 
-
-
+  position: relative;
+  left: 8em;
+}
   #m-menu {
     width: 100%;
     display: grid;
@@ -677,13 +712,13 @@ Medium devices (landscape tablets, 768px and up)
   #checkout-main {
     width: 100%;
 
-}
+  }
 
   #banner-slogan {
 
     height: auto;
     margin: revert;
-}
+  }
 
   #sub-nav {
     display: block !important;
@@ -709,11 +744,11 @@ Medium devices (landscape tablets, 768px and up)
 
   }
 
-  .products-stream {
-    width: 100%;
-    display: grid;
+  
+   .products-stream {
     /* grid-gap: 2%;  BAD for 1049px screens */
     grid-template-columns: 32% 32% 32%;
+   
 
   }
 
@@ -724,86 +759,89 @@ Medium devices (landscape tablets, 768px and up)
 /* Large devices (laptops/desktops, 992px and down) */
 @media only screen and (max-width: 992px) {
 
+  #mealkit-masthead,
   #masthead {
 
-    background-position-x: -35em;
+    background-image: none !important;
   }
+
   #mealkit-masthead {
 
     // background-position-x: -35em;
     background-position-x: -40em;
     background-size: auto;
- }
+  }
 
- .select-plan, .products-stream form select {
-   background-color:white;
-  border: 1px solid #0000001c;
-}
+  .select-plan, .products-stream form select {
+    background-color: white;
+    border: 1px solid #0000001c;
+  }
+
   #gifts-masthead {
     background-image: url('../images/gifts.png');
     background-size: cover;
     background-position: center 20em;
-}
-  
   }
 
-
-  .hack{
-    display: none;
-  }
-
-  .product-title{
-    width: 200px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-
-
-  #order-summary{
-    display: none;
-  }
-
-  #nav-categories a {
-   height:fit-content;
-   min-width: auto;
 }
 
-  #header-inner-wrapper {
 
-    grid-template-columns: auto auto auto auto;
-  }
+.hack {
+  display: none;
+}
 
-  #header-inner-wrapper .hide {
-   display: none;
-  }
+.product-title {
+  width: 200px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
 
- 
-  #banner-footer {
-    background-image: none;
 
-  }
+#order-summary {
+  display: none;
+}
 
-  #index #how-it-works {
-    display: block;
-    width: 80%;
+#nav-categories a {
+  height: fit-content;
+  min-width: auto;
+}
 
-  }
+#header-inner-wrapper {
 
-  #index #masthead,  #mealkit-masthead, {
+  grid-template-columns: auto auto auto;
+}
 
-    max-height: 44em;
-  }
+#header-inner-wrapper .hide {
+  display: none;
+}
 
-  .block {
-    height: auto;
-    display: none;
-  }
 
-  .mobile-scroll {
-    max-width: 100%;
-    /* overflow-x: scroll; */
-  }
+#banner-footer {
+  background-image: none;
+
+}
+
+#index #how-it-works {
+  display: block;
+  width: 80%;
+
+}
+
+#index #masthead, #mealkit-masthead, {
+
+  max-height: 44em;
+}
+
+.block {
+  height: auto;
+  display: none;
+}
+
+.mobile-scroll {
+  max-width: 100%;
+  /* overflow-x: scroll; */
+}
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -812,12 +850,12 @@ Medium devices (landscape tablets, 768px and up)
 
 
 
-#gifts-masthead {
-  background-image: url('../images/ribbons.png');
-  background-size: cover;
-  background-position: -10em bottom;
+  #gifts-masthead {
+    background-image: url('../images/ribbons.png');
+    background-size: cover;
+    background-position: -10em bottom;
 
-}
+  }
 
 
   #header-inner-wrapper {
@@ -918,7 +956,7 @@ Medium devices (landscape tablets, 768px and up)
 
   /* Shop */
   .cart-banner {
-   width: 75%;
+    width: 75%;
 
   }
 
