--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -570,9 +570,10 @@ dialog p {
 
 }
 
-#publish form fieldset{
-  border:none;
+#publish form fieldset {
+  border: none;
 }
+
 .blog-title {
   padding: 0.5em;
   font-size: 3.25rem !important;
@@ -1085,8 +1086,8 @@ main h1 {
 
 .active:after {
 
-//  transform: rotate(180deg);
- 
+  //  transform: rotate(180deg);
+
 }
 
 #pitch {
@@ -1172,6 +1173,11 @@ main h1 {
 
 .maxw250px {
   max-width: 250px;
+}
+.w250px{
+
+  width:250px;
+
 }
 
 #sentiment-survey h1 {
@@ -1597,9 +1603,18 @@ input[type="checkbox"] {
 }
 
 .products-stream img {
-  width: 100%;
-  max-height: 466px;
-  max-width: 300px;
+  //width: 100%;
+  //max-height: 466px;
+  //max-width: 300px;
+
+}
+.fixed-w100per{
+  width:100%;
+}
+.p-author{
+  
+    display: grid;
+    grid-template-columns: 45px 80%;
 
 }
 
@@ -2223,9 +2238,36 @@ container when the user clicks on the dropdown button) */
   margin-bottom: 1.3em;
 
 }
-.point-7-em-font{
+
+
+div#social-links {
+  margin: 0 auto;
+  max-width: 500px;
+}
+
+div#social-links ul li {
+  display: inline-block;
+}
+
+div#social-links ul li a {
+  padding: 20px;
+  border: 1px solid #ccc;
+  margin: 1px;
+  font-size: 30px;
+  color: #222;
+  background-color: #ccc;
+}
+
+
+
+h3 {
+  text-transform: capitalize;
+}
+
+.point-7-em-font {
   font-size: .7em;
 }
+
 .p-relative img {
   width: 100%;
   height: auto;
@@ -2236,10 +2278,10 @@ container when the user clicks on the dropdown button) */
   text-decoration: none;
 }
 
-#author{
+#author {
   border-radius: 999px;
   position: relative;
-  top: 0.5em;
+  top: -0.1em;
 
 }
 
@@ -3080,14 +3122,16 @@ li form {
   text-align: center;
 }
 
-.h100per{
+.h100per {
   height: 100%;
 }
-.fix-comment-thumb{
+
+.fix-comment-thumb {
   position: relative;
   top: 0.35em;
 
 }
+
 .review {
   border-bottom: 1px solid #8bc34a;
   padding-top: 2em;
@@ -3196,7 +3240,14 @@ ul {
 
 ol {
   list-style: disc;
+  width: auto;
+  max-width: 500px;
+  padding: 2em;
+  margin-left:1em;
 
+}
+ol li{
+  margin-bottom:1em;
 }
 
 .order-summary,
