--- a/public_html/assets/css/mobile.css
+++ b/public_html/assets/css/mobile.css
@@ -82,18 +82,22 @@ Extra small devices (phones, 600px and down)
 */
 @media only screen and (max-width: 600px) {
 
+  #mealkit-masthead{
+    background-image: none;
+    height:fit-content;
+  }
   #flyout {
     height: 65% !important;
-}
+  }
 
-#menu h2{
-  font-size: 1.5em !important;
-}
+  #menu h2 {
+    font-size: 1.5em !important;
+  }
 
   #masthead {
 
-     background-image: none !important;
-    }
+    background-image: none !important;
+  }
 
   .alert-info {
 
@@ -104,7 +108,6 @@ Extra small devices (phones, 600px and down)
 
   .p-relative img {
     width: 100%;
-    //max-width: 300px;
     height: auto;
 
   }
@@ -140,7 +143,6 @@ Extra small devices (phones, 600px and down)
   .stars-grid {
     display: block;
     width: auto;
-    //padding:1em;
 
   }
 
@@ -344,12 +346,6 @@ Extra small devices (phones, 600px and down)
     grid-template-columns: auto auto auto auto;
   }
 
-
-
-  /* .display-none {
-    display: block !important;
-  } */
-
   .nudge-left {
 
     left: -1.5em;
@@ -473,15 +469,11 @@ Extra small devices (phones, 600px and down)
     background-image: none;
   }
 
-
   #creators-bar,
   #boxes-panel {
     width: 80%;
   }
 
-  /* .creator-ego {
-    width: 75px !important;
-  } */
   .phone-hide,
   .hide {
     display: none;
@@ -542,21 +534,6 @@ Small devices (portrait tablets and large phones, 600px and up)
     margin: revert;
   }
 
-  /*  #banner-slogan {
-
-    height: auto; 
-
-}
-
-  .m-hide {
-    display: block;
-  }
-
-  #about .hide {
-    display: none;
-  } */
-
-
   .recipes-stream,
   .products-stream {
 
@@ -567,10 +544,6 @@ Small devices (portrait tablets and large phones, 600px and up)
   #sub-nav {
     display: block;
   }
-
-  /* .hide {
-     display: none !important;
-  } */
 
   #header-inner-wrapper {
 
@@ -585,15 +558,6 @@ Small devices (portrait tablets and large phones, 600px and up)
   .display-none {
     display: block;
   }
-
-  /* Shop */
-
-  /* .products-stream {
-    width: 100%;
-    display: grid;
-    grid-template-columns: none;
-
-  } */
 
   .cart-banner {
     grid-template-columns: auto auto;
@@ -612,8 +576,6 @@ Small devices (portrait tablets and large phones, 600px and up)
 
   .new-section-inner-grid {
     grid-template-columns: auto 72% auto;
-    /* grid-template-columns: 50% 50%;
-    grid-template-columns: auto; */
 
   }
 
@@ -638,8 +600,6 @@ Small devices (portrait tablets and large phones, 600px and up)
     width: 80%;
   }
 
-  .maxw1035 {}
-
   .creator-ego {
     width: 75px !important;
   }
@@ -656,15 +616,6 @@ Small devices (portrait tablets and large phones, 600px and up)
     grid-template-columns: none;
     grid-template-rows: auto auto;
   }
-
-  /* .new-section-inner-grid {
-    grid-template-columns: 50% 50%;
-
-  } */
-
-  /* .hide {
-     display: none;
-  } */
 
   section,
   .pricing,
@@ -684,37 +635,34 @@ Small devices (portrait tablets and large phones, 600px and up)
     min-width: 200px;
   }
 
-
-
 }
+
 /* 
 Medium devices (landscape tablets, 768px and down) 
 */
 @media only screen and (max-width: 768px) {
 
+  #m-menu {
+    width: 100%;
+    display: grid;
+    height: 70px;
+    background-color: green;
+    position: fixed;
+    bottom: 0;
+    padding-top: 1em;
+  }
 
+  .alert-info {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 
-#m-menu {
-  width: 100%;
-  display: grid;
-  height: 70px;
-  background-color: green;
-  position: fixed;
-  bottom: 0;
-  padding-top: 1em;
-}
-.alert-info {
-  width: 95%;
-  margin-left: auto;
-  margin-right: auto;
-}
-}
 /* 
 Medium devices (landscape tablets, 768px and up) 
 */
 @media only screen and (min-width: 768px) {
-
-
 
   #checkout-main {
     width: 100%;
@@ -751,11 +699,10 @@ Medium devices (landscape tablets, 768px and up)
 
   }
 
-  
-   .products-stream {
+  .products-stream {
     /* grid-gap: 2%;  BAD for 1049px screens */
     grid-template-columns: 32% 32% 32%;
-   
+
   }
 
 }
@@ -764,9 +711,6 @@ Medium devices (landscape tablets, 768px and up)
 
 @media only screen and (max-width: 992px) {
 
-  #index #masthead{
-   // background-position-x: -19em;
-  }
 
   #mealkit-masthead {
     background-position-x: -40em;
@@ -808,15 +752,6 @@ Medium devices (landscape tablets, 768px and up)
   min-width: auto;
 }
 
-#header-inner-wrapper {
-
-  //grid-template-columns: auto auto auto;
-}
-
-#header-inner-wrapper .hide {
- // display: none;
-}
-
 #banner-footer {
   background-image: none;
 
@@ -828,7 +763,7 @@ Medium devices (landscape tablets, 768px and up)
 
 }
 
-#index #masthead, #mealkit-masthead {
+#index #masthead {
 
   max-height: 44em;
 }
@@ -840,9 +775,9 @@ Medium devices (landscape tablets, 768px and up)
 
 .mobile-scroll {
   max-width: 100%;
-  /* overflow-x: scroll; */
+
 }
-}
+
 
 /* Large devices (laptops/desktops, 992px and up) */
 
